@@ -1,19 +1,30 @@
 Function: nfbasis
 Section: number_fields
-C-Name: nfbasis_gp
-Prototype: G
-Help: nfbasis(T): integral basis of the field Q[a], where a is
+C-Name: nfbasis
+Prototype: GD&
+Help: nfbasis(T, {&dK}): integral basis of the field Q[a], where a is
  a root of the polynomial T, using the round 4 algorithm. An argument
- [T,listP] is possible, where listP is a list of primes (to get an
- order which is maximal at certain primes only) or a prime bound.
+ [T,listP] is possible, where listP is a list of primes or a prime bound,
+ to get an order which is maximal at certain primes only. If present, dK is
+ set to the discriminant of the returned order.
 Doc:
  Let $T(X)$ be an irreducible polynomial with integral coefficients. This
  function returns an \idx{integral basis} of the number field defined by $T$,
- that is a $\Z$-basis of its maximal order. The basis elements are given as
- elements in $\Q[X]/(T)$:
+ that is a $\Z$-basis of its maximal order. If present, \kbd{dK} is set
+ to the discriminant of the returned order. The basis elements are given as
+ elements in $K = \Q[X]/(T)$, in Hermite normal form with respect to the
+ $\Q$-basis $(1,X,\dots,X^{\deg T-1})$ of $K$, lifted to $\Q[X]$.
+ In particular its first element is always $1$ and its $i$-th element is a
+ polynomial of degree $i-1$ whose leading coefficient is the inverse of an
+ integer: the product of those integers is the index of $\Z[X]/(T)$ in the
+ maximal order $\Z_K$:
  \bprog
- ? nfbasis(x^2 + 1)
- %1 = [1, x]
+ ? nfbasis(x^2 + 4) \\ Z[X]/(T) has index 2 in Z_K
+ %1 = [1, x/2]
+ ? nfbasis(x^2 + 4, &D)
+ %2 = [1, x/2]
+ ? D
+ %3 = -4
  @eprog
  This function uses a modified version of the \idx{round 4} algorithm,
  due to David \idx{Ford}, Sebastian \idx{Pauli} and Xavier \idx{Roblot}.
@@ -42,10 +53,10 @@ Doc:
 
  In all these cases, the primes may or may not divide the discriminant $D$
  of $T$. The function then returns a $\Z$-basis of an order whose index is
- not divisible by any of these prime numbers. The result is actually a global
- integral basis if all prime divisors of the \emph{field} discriminant are
- included! Note that \kbd{nfinit} has built-in support for such
- a check:
+ not divisible by any of these prime numbers. The result may actually be
+ a global integral basis, in particular if all the prime divisors of the
+ \emph{field} discriminant are included, but this is not guaranteed!
+ Note that \kbd{nfinit} has built-in support for such a check:
  \bprog
  ? K = nfinit([T, listP]);
  ? nfcertify(K)   \\ we computed an actual maximal order
@@ -55,7 +66,9 @@ Doc:
  The second line certifies that the resulting structure is correct. This
  allows to create an \kbd{nf} structure attached to the number field $K =
  \Q[X]/(T)$, when the discriminant of $T$ cannot be factored completely,
- whereas the prime divisors of $\disc K$ are known.
+ whereas the prime divisors of $\disc K$ are known. If present, the argument
+ \kbd{dK} is set to the discriminant of the returned order, and is
+ equal to the field discriminant if and only if the order is maximal.
 
  Of course, if \var{listP} contains a single prime number $p$,
  the function returns a local integral basis for $\Z_p[X]/(T)$:
@@ -64,42 +77,59 @@ Doc:
  %1 = [1, 1/3*x - 1/3]
  ? nfbasis( [x^2+x-1001, [2]] )
  %2 = [1, x]
- @eprog
+ @eprog\noindent The following function computes the index $i_T$ of $\Z[X]/(T)$
+ in the order generated by the $\Z$-basis $B$:
+ \bprog
+ nfbasisindex(T, B) = vecprod([denominator(pollead(Q)) | Q <- B]);
+ @eprog\noindent In particular, $B$ is a basis of the maximal order
+ if and only if $\kbd{poldisc}(T) / i_T^2$ is equal to the field
+ discriminant. More generally, this formula gives the square of index of the
+ order given by $B$ in $\Z_K$. For instance, assume that $P$ is a vector
+ of prime numbers containing (at least) all prime divisors of the field
+ discriminant, then the following construct allows to provably compute the
+ field discriminant and to check whether the returned basis is actually
+ a basis of the maximal order
+ \bprog
+ ? B = nfbasis([T, P], &D);
+ ? dK = sign(D) * vecprod([p^valuation(D,p) | p<-P]);
+ ? dK * nfbasisindex(T, B)^2 == poldisc(T)
+ @eprog\noindent The variable \kbd{dK} contains the field discriminant and
+ the last command returns $1$ if and only if $B$ is a $\Z$-basis of the
+ maximal order. Of course, the \kbd{nfinit} / \kbd{nfcertify} approach is
+ much simpler, but it is also more costly.
 
  \misctitle{The Buchmann-Lenstra algorithm}
 
  We now complicate the picture: it is in fact allowed to include
  \emph{composite} numbers instead of primes
  in \kbd{listP} (Vector or Matrix case), provided they are pairwise coprime.
- The result will still be a correct integral basis \emph{if}
+ The result may still be a correct integral basis if
  the field discriminant factors completely over the actual primes in the list.
  Adding a composite $C$ such that $C^2$ \emph{divides} $D$ may help because
  when we consider $C$ as a prime and run the algorithm, two good things can
- happen: either we
- succeed in proving that no prime dividing $C$ can divide the index
- (without actually needing to find those primes), or the computation
+ happen: either we succeed in proving that no prime dividing $C$ can divide the
+ index (without actually needing to find those primes), or the computation
  exhibits a non-trivial zero divisor, thereby factoring $C$ and
  we go on with the refined factorization. (Note that including a $C$
  such that $C^2$ does not divide $D$ is useless.) If neither happen, then the
  computed basis need not generate the maximal order. Here is an example:
  \bprog
  ? B = 10^5;
- ? P = factor(poldisc(T), B)[,1]; \\ primes <= B dividing D + cofactor
- ? basis = nfbasis([T, listP])
- ? disc = nfdisc([T, listP])
+ ? listP = factor(poldisc(T), B); \\ primes <= B dividing D + cofactor
+ ? basis = nfbasis([T, listP], &D)
  @eprog\noindent We obtain the maximal order and its discriminant if the
  field discriminant factors
  completely over the primes less than $B$ (together with the primes
  contained in the \tet{addprimes} table). This can be tested as follows:
  \bprog
-   check = factor(disc, B);
-   lastp = check[-1..-1,1];
+   vP = factor(D, B)[,1];
+   lastp = vP[#vP];
    if (lastp > B && !setsearch(addprimes(), lastp),
-     warning("nf may be incorrect!"))
+     warning("nf may be incorrect"))
  @eprog\noindent
  This is a sufficient but not a necessary condition, hence the warning,
  instead of an error. N.B. \kbd{lastp} is the last entry
- in the first column of the \kbd{check} matrix, i.e. the largest prime
+ in the first column of the factorisation matrix, i.e. the largest prime
  dividing \kbd{nf.disc} if $\leq B$ or if it belongs to the prime table.
 
  The function \tet{nfcertify} speeds up and automates the above process:
@@ -108,9 +138,5 @@ Doc:
  ? nf = nfinit([T, B]);
  ? nfcertify(nf)
  %3 = []      \\ nf is unconditionally correct
- ? basis = nf.zk;
- ? disc = nf.disc;
+ ? [basis, disc] = [nf.zk, nf.disc];
  @eprog
-
- \synt{nfbasis}{GEN T, GEN *d, GEN listP = NULL}, which returns the order
- basis, and where \kbd{*d} receives the order discriminant.
