@@ -262,6 +262,11 @@ Mod(5*y^4 + 4*y^3 - 12*y^2 - y - 5, y^5 - 4*y^3 + 2*y + 11)
 [-1071, -384, -251, -155, 20]~
 [1]
 [1, 1/2*x - 1/2]
+[1, x, x^2, 1/37*x^3 - 15/37*x^2 + 1/37*x]
+[1, x, x^2, 1/37*x^3 - 15/37*x^2 + 1/37*x]
+1591637628352930672717229
+602516101264181
+51397.000000000000000000000000000000000
 [2, Mod(0, 2)]~
 [x^2 + x + 1, [0, 1], -3, 1, [Mat([1, -0.50000000000000000000000000000000000
 000 + 0.86602540378443864676372317075293618347*I]), [1, 0.366025403784438646
@@ -555,4 +560,4 @@ Mod(-6/5, x)
   ***   at top-level: nfalgtobasis(nf,['a,'a]~)
   ***                 ^-------------------------
   *** nfalgtobasis: incorrect type in nfalgtobasis (t_COL).
-Total time spent: 13920
+Total time spent: 13644
